# edc-jlab

./: .gitignore  .prettierignore  MANIFEST.in  README.md  build_package.sh  development_install.sh  docker-compose.yml  install.json  install_extension.sh  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml
dev/nginx-conf.d/: jupyter.conf  nbviewer.conf
edc-jlab/labextension/: package.json
edc_jlab/: __init__.py  handlers.py
jupyter-config/jupyter_notebook_config.d/: edc_jlab.json
jupyter-config/jupyter_server_config.d/: edc_jlab.json
src/: constants.ts  contestSubmit.ts  contribute.ts  copyByRouter.ts  handler.ts  iframeApp.ts  index.ts  notebookCatalog.ts  stacDownload.ts  versionLink.ts
style/: base.css  index.css
